
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poseigen_trident"
version = "0.1.4"
description = "Neural network design and training utilities for the Poseigen family"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "Husam Abdulnabi", email = "husam.abdulnabi@gmail.com" }]
maintainers = [{ name = "Husam Abdulnabi", email = "husam.abdulnabi@gmail.com" }]
keywords = ["poseigen", "bioinformatics", "machine-learning", "neural-networks"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scipy",
  "poseigen_seaside",
  "poseigen_binmeths",
  "poseigen_compass",
]

[project.optional-dependencies]
dev = [
  "build",
  "twine",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/husam94/poseigen_trident"
Repository = "https://github.com/husam94/poseigen_trident"
Issues = "https://github.com/husam94/poseigen_trident/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]